--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,3 +1,4 @@
+@import "colors";
 .container {
 }
 .body {
@@ -5,4 +6,20 @@
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   column-gap: 1.875rem;
+  row-gap: 2.25rem;
+  .wishlist {
+    grid-column-start: 9;
+    grid-column-end: 13;
+    border: 0.6px solid $border-color;
+    border-radius: 6px;
+  }
+  .small-banner {
+    grid-column-start: 1;
+    grid-column-end: 9;
+    display: flex;
+    gap: 2rem;
+    & > * {
+      width: 50%;
+    }
+  }
 }
