--- a/styles/BodyComponents.module.scss
+++ b/styles/BodyComponents.module.scss
@@ -35,6 +35,7 @@
 
 // ------------------------------SHAMSHERA-------------------------------------------
 .shamshera-container {
+  cursor: pointer;
   border-radius: 6px;
   background: linear-gradient(
       89.8deg,
