--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -5,13 +5,28 @@
   padding: 2rem 5rem;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: 1fr 0.5fr 0.5fr 1fr;
   column-gap: 1.875rem;
   row-gap: 2.25rem;
-  .wishlist {
+  .orders {
     grid-column-start: 9;
     grid-column-end: 13;
     border: 0.6px solid $border-color;
     border-radius: 6px;
+  }
+  .history {
+    grid-column-start: 9;
+    grid-column-end: 13;
+    border: 0.6px solid $border-color;
+    border-radius: 6px;
+    grid-row-start: 2;
+    grid-row-end: 4;
+  }
+  .wishlist {
+    border: 0.6px solid $border-color;
+    border-radius: 6px;
+    grid-column-start: 9;
+    grid-column-end: 13;
   }
   .small-banner {
     grid-column-start: 1;
