--- a/styles/_colors.scss
+++ b/styles/_colors.scss
@@ -9,3 +9,4 @@ $btn-orange-dark: #f4bb64;
 $border-color: rgba(20, 25, 32, 0.18);
 $text-light: rgba(42, 46, 50, 0.77);
 $orange-light: rgba(253, 220, 171, 0.46);
+$rating-blue: #007185;
