--- a/styles/Productpage.module.scss
+++ b/styles/Productpage.module.scss
@@ -1,6 +1,115 @@
 @import "colors";
 @import "fonts";
 
+//+++++++++++++++++++++ BODY +++++++++++++++++++++++++++
+.body {
+  margin: 5rem auto;
+  max-width: 1500px;
+  display: flex;
+  font-family: $inter-font-family;
+  & > * {
+    flex-basis: 0;
+    flex-grow: 1;
+    // border: 1px solid red;
+  }
+}
+.info header {
+  p {
+    margin: 0;
+    padding: 0;
+    font-size: 0.875rem;
+    color: $gray;
+    text-transform: uppercase;
+  }
+  h3 {
+    margin: 0;
+    padding: 0;
+    font-size: 2.5rem;
+    font-weight: 400;
+  }
+}
+.review-social {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 0.6px solid $border-light;
+  padding-bottom: 0.6rem;
+  margin-bottom: 2rem;
+  .review {
+    display: flex;
+    gap: 1rem;
+    font-size: 0.875rem;
+    font-weight: 500;
+    color: $racing-blue;
+    cursor: pointer;
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+  .social {
+    display: flex;
+    gap: 0.5rem;
+    .icons {
+      font-size: 1.8em;
+      color: $light-gray;
+      cursor: pointer;
+      &:hover {
+        color: $racing-blue;
+      }
+    }
+  }
+}
+.price-cart {
+  display: flex;
+  align-items: center;
+  .price {
+    small {
+      color: $gray;
+      font-size: 0.875rem;
+    }
+    p {
+      margin: 0;
+      font-size: 3rem;
+      font-weight: 300;
+    }
+  }
+  .stock-info {
+    display: flex;
+    flex-direction: column;
+    > span > * {
+      margin: 0;
+      padding: 0;
+    }
+    .out-of-stock {
+      font-size: 0.875rem;
+      font-weight: 600;
+      color: $amazon-orange;
+      margin: 0;
+    }
+    .shipping {
+      display: flex;
+      align-items: center;
+      gap: 0.75rem;
+      p {
+        font-size: 0.875rem;
+        color: $dark;
+        font-weight: 800;
+        text-align: center;
+      }
+      a {
+        text-align: center;
+        font-size: 0.75rem;
+        color: $racing-blue;
+        font-weight: 600;
+      }
+    }
+  }
+  & > * {
+    flex-basis: 0;
+    flex-grow: 1;
+    // border: 1px solid red;
+  }
+}
 // ++++++++++++++++++++ LOADING +++++++++++++++++++++
 .loading-text {
   font-family: $inter-font-family;
