--- a/styles/_colors.scss
+++ b/styles/_colors.scss
@@ -2,11 +2,14 @@ $amazon-blue: #141920;
 $nav-blue: #252f3d;
 $dark: #2a2e32;
 $gray: #737373;
+$light-gray: #d9d9d9;
 $amazon-orange: #ff9900;
 $btn-orange: #ffd08a;
 $btn-orange-2: #f4bf76;
 $btn-orange-dark: #f4bb64;
 $border-color: rgba(20, 25, 32, 0.18);
+$border-light: #e4e4e4;
 $text-light: rgba(42, 46, 50, 0.77);
 $orange-light: rgba(253, 220, 171, 0.46);
 $rating-blue: #007185;
+$racing-blue: #2fa0db;
