--- a/styles/_colors.scss
+++ b/styles/_colors.scss
@@ -5,8 +5,10 @@ $gray: #737373;
 $light-gray: #d9d9d9;
 $amazon-orange: #ff9900;
 $btn-orange: #ffd08a;
+$btn-white-bg: #f2f3f4;
 $btn-orange-2: #f4bf76;
 $btn-orange-dark: #f4bb64;
+$border-cart-btn: #d8dade;
 $border-color: rgba(20, 25, 32, 0.18);
 $border-light: #e4e4e4;
 $text-light: rgba(42, 46, 50, 0.77);
