Recent Orders section

--- a/styles/_colors.scss
+++ b/styles/_colors.scss
@@ -15,3 +15,5 @@ $text-light: rgba(42, 46, 50, 0.77);
 $orange-light: rgba(253, 220, 171, 0.46);
 $rating-blue: #007185;
 $racing-blue: #2fa0db;
+$green: #67ac5b;
+$danger: #e25241;
