--- a/styles/BodyComponents.module.scss
+++ b/styles/BodyComponents.module.scss
@@ -33,6 +33,8 @@
   p {
     font-size: $inter-font-family;
     font-size: 0.75rem;
+    font-weight: 500;
+    color: $dark;
     text-align: center;
     overflow: hidden;
     white-space: nowrap; /* Don't forget this one */
