--- a/styles/Wishlist.module.scss
+++ b/styles/Wishlist.module.scss
@@ -67,6 +67,7 @@
           color: $racing-blue;
           &:hover {
             color: $rating-blue;
+            text-decoration: underline;
           }
         }
       }
